tests/sources/invalid/expressions/cast_to_non_type_token.fire
// Parser error: 'as' followed by a token that is not a type name.

fn cast_to_non_type_token() -> void {
    x: int32 = 5;
    y: int32 = x as 5;  //~ ERROR FS-PARSE-0010 @21
}
